add all tools monitoring

--- a/compose.yaml
+++ b/compose.yaml
@@ -7,28 +7,23 @@ services:
       - "9090:9090"
     volumes:
       - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-
-
   ## Tempo
   my-tempo:
     image: grafana/tempo
     container_name: my-tempo
     command: [ "-config.file=/etc/tempo.yaml" ]
-    user: root
     volumes:
       - ./docker/tempo/tempo.yml:/etc/tempo.yaml:ro
       - ./docker/tempo/tempo-data:/tmp/tempo
     ports:
-      - "3200:3200"
-      - "9411:9411"
-
+      - "3200:3200" # Tempo
+      - "9411:9411" # zipkin
   my-loki:
     image: grafana/loki:main
     container_name: my-loki
     command: [ "-config.file=/etc/loki/local-config.yaml" ]
     ports:
       - "3100:3100"
-
   my-grafana:
     image: grafana/grafana
     container_name: my-grafana
@@ -40,3 +35,12 @@ services:
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=password
+  my-product-service:
+    build: ./
+    container_name: my-product-service
+    depends_on:
+      - my-tempo
+      - my-loki
+    restart: always
+    ports:
+      - "8081:8081"
